разметка первой страницы

--- a/index.html
+++ b/index.html
@@ -2,11 +2,152 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title></title>
   </head>
   <body>
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  			<a class="main-header-logo" href="index.html"><img src="img/logo.svg" width="60" height="35" alt="Логотип Gllacy Shop"></a>
+  			<ul class="site-navigation">
+  				<li><a href="catalog.html">Каталог</a></li>
+  				<li><a href="delivery-purchase.html">Доставка и оплата</a></li>
+  				<li><a href="about-us">О компании</a></li>	
+  			</ul>
+  			<ul class="user-navigation">
+  				<li><input type="search" name="search">Поиск</li>
+  				<li class="login-link">Вход</li>
+  				<li><form>Корзина</form></li>
+  			</ul>
+  			<p class="header-contacts">
+  				С 10 до 20, ежедневно<br>
+  				<span class="phone-number">8 812 450-25-25</span>
+  			</p>  			
+  		</nav>
+  	</header>
+  	<main class="container">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  		<h1 class="visually-hidden">Мороженое Gllacy</h1>
 
+  		<section class="main-advertising">
+  			<h2 class="visually-hidden">Купить в 1 клик</h2>
+  			<ul class="advertising-list">
+  				<li class="advertising-item-1"><img src="img/advertising-item-1.svg" width="200" height="100" alt="Крем-брюле и пломбир"><p>Крем-брюле и пломбир с малиновым джемом</p></li>
+  				<li class="advertising-item-2"><img src="img/advertising-item-2.svg" width="200" height="100" alt="Шоколадный пломбир и лимонный сорбет"><p>Шоколадный пломбир и лимонный сорбет</p></li>
+  				<li class="advertising-item-3"><img src="img/advertising-item-3.svg" width="200" height="100" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
+  			</ul>
+  			<a class="button" href="#">Давайте оба!</a>	
+  		</section>
+  		<section class="special-offers">
+  			<h2 class="visually-hidden">Акции</h2>
+  			<ul class="offer-items">
+  				<li class="offer-item-1">
+  					<h3>Малинка даром!</h3>
+  					<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+  				<a class="button" href="#">Хочу варенье!</a>
+  				</li>
+  				<li class="offer-item-2">
+  					<h3>Шоколадки даром!</h3>
+  					<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+  				<a class="button" href="#">Хочу шоколадки!</a>
+  				</li>
+  			</ul>
+  		</section>
+  		<section class="hits">
+  			<h2 class="visually-hidden">Лучшие продажи</h2>
+  			<ul class="hits-list">
+  				<li class="hits-item">
+  					<h3>
+  						<a href="hits.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+  					</h3>
+  					<p class="hits-item-image">
+              			<a href="hits-item.html">
+                			<img src="img/product-1.jpg" width="90" height="90" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+             			</a>
+           			</p>
+  					<p class="hits-item-price">310 р/<span>кг</span></p>
+  				</li>
+  				<li class="hits-item">
+  					<h3>
+  						<a href="hits.html">Сливочно-кофейное с кусочками шоколада</a>
+  					</h3>
+  					<p class="hits-item-image">
+              			<a href="hits-item.html">
+                			<img src="img/product-2.jpg" width="90" height="90" alt="Сливочно-кофейное с кусочками шоколада">
+             			</a>
+           			</p>
+  					<p class="hits-item-price">380 р/<span>кг</span></p>
+  				</li>
+  				<li class="hits-item">
+  					<h3>
+  						<a href="hits.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
+  					</h3>
+  					<p class="hits-item-image">
+              			<a href="hits-item.html">
+                			<img src="img/product-3.jpg" width="90" height="90" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+             			</a>
+           			</p>
+  					<p class="hits-item-price">355 р/<span>кг</span></p>
+  				</li>
+  				<li class="hits-item">
+  					<h3>
+  						<a href="hits.html">Сливочное крем-брюле с карамельной подливкой</a>
+  					</h3>
+  					<p class="hits-item-image">
+              			<a href="hits-item.html">
+                			<img src="img/product-4.jpg" width="90" height="90" alt="Сливочное крем-брюле с карамельной подливкой">
+             			</a>
+           			</p>
+  					<p class="hits-item-price">415 р/<span>кг</span></p>
+  				</li>
+  			</ul>
+  		</section>
+  		<section class="our-advantages">
+  			<h2>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+  			<ul class="advantages-list">
+  				  <li class="advantages-item"><p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p></li>
+  				  <li class="advantages-item"><p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального экологически чистого сырья.</p></li>
+  				  <li class="advantages-item"><p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p></li>
+  				  <li class="advantages-item"><p>Доставка нашего мороженого до заказчика осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p></li>
+  			</ul>
+  		</section>
+  		<section class="blog-entry">
+  			<h2>Новое в нашем блоге</h2>
+  			<h3><a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a></h3>
+  			<p class="blog-entry-image"><img src="img/blog-entry.svg" width="70" height="80" alt="сервировка щербета"></p>
+  		</section>
+  		<section class="subscribe-form">
+  			<p>Подпишитесь на нашу рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+  			<form>
+  				<!-- форма подписки -->
+  			</form>
+  		</section>
+  		<section class="map">
+  			<!-- карта -->
+  		</section>
+  		<section class="feedback">
+  			<!-- форма обратной связи -->
+  		</section>
+  	</main>
+  	<footer class="main-footer">
+  		<div class="footer-social">
+  			<ul>
+  				<li><a class="social-button" href="#">Твиттер</a></li>
+          		<li><a class="social-button" href="#">Инстаграм</a></li>
+          		<li><a class="social-button" href="#">Фейсбук</a></li>
+          		<li><a class="social-button" href="#">Вконтакте</a></li>
+       		 </ul>
+       	<div class="footer-details">
+       		<ul>
+       			<li><a class="details-item" href="#"></a>Для поставщиков</li>
+       			<li><a class="details-item" href="#"></a>О производстве</li>
+       			<li><a class="details-item" href="#"></a>Наши документы</li>
+       			<li><a class="details-item" href="#"></a>Экологические стандарты</li>
+       		</ul>
+       	</div>
+  		<p class="footer-copyright">
+        <b>Сделано в</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a> &#9400 2017.
+      	</p>
+  		</div>
+  	</footer>
   </body>
-</html>
+  </html>
