переделанные каталог и первая

--- a/catalog.html
+++ b/catalog.html
@@ -33,10 +33,12 @@
     <section class="select-icecream">
       <h1>Сливочное мороженое</h1>
       <!-- форма фильтров -->
-      <a class="button" href="#">Применить</a> 
+      <form>
+      <input type="submit" name="select">
+      </form> 
       
-      <ul class="icecream-list">
-          <li class="icecream-item">
+      <section class="articles-list">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </h3>
@@ -46,9 +48,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">310 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочно-кофейное с кусочками шоколада</a>
             </h3>
@@ -58,9 +60,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">380 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </h3>
@@ -70,9 +72,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">355 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное крем-брюле с карамельной подливкой</a>
             </h3>
@@ -82,9 +84,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">415 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с брусничным джемом</a>
             </h3>
@@ -94,9 +96,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">325 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочно-черничное с цельными ягодами черники</a>
             </h3>
@@ -106,9 +108,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">410 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочно-лимонное с карамельной присыпкой</a>
             </h3>
@@ -118,9 +120,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">375 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с шоколадной стружкой</a>
             </h3>
@@ -130,9 +132,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">320 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочно-ванильное с кусочками шоколада</a>
             </h3>
@@ -142,9 +144,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">440 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с ментоловым сиропом</a>
             </h3>
@@ -154,9 +156,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">435 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с кусочками черного шоколада</a>
             </h3>
@@ -166,9 +168,9 @@
                   </a>
                 </p>
             <p class="icecream-item-price">355 р/<span>кг</span></p>
-          </li>
+          </div>
 
-          <li class="icecream-item">
+          <div class="icecream-item">
             <h3>
               <a href="icecream.html">Сливочное с мятным сиропом</a>
             </h3>
@@ -178,8 +180,8 @@
                   </a>
                 </p>
             <p class="icecream-item-price">420 р/<span>кг</span></p>
-          </li>
-        </ul>
+          </div>
+        </section>
         <ul class="pagination-list">
           <li class="pagination-item pagination-item-current""><a href="#">1</a></li>
           <li class="pagination-item"><a>2</a></li>
