--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   			<ul class="site-navigation">
   				<li><a href="catalog.html">Каталог</a></li>
   				<li><a href="delivery-purchase.html">Доставка и оплата</a></li>
-  				<li><a href="about-us">О компании</a></li>	
+  				<li><a href="about-us.html">О компании</a></li>	
   			</ul>
   			<ul class="user-navigation">
   				<li><input type="search" name="search">Поиск</li>
@@ -110,6 +110,7 @@
   				  <li class="advantages-item"><p>Доставка нашего мороженого до заказчика осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p></li>
   			</ul>
   		</section>
+      <section class="blog-subscribe-forms">
   		<section class="blog-entry">
   			<h2>Новое в нашем блоге</h2>
   			<h3><a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a></h3>
@@ -121,6 +122,7 @@
   				<!-- форма подписки -->
   			</form>
   		</section>
+      </section>
   		<section class="map">
   			<!-- карта -->
   		</section>
