--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   	<header class="main-header">
   		<nav class="main-navigation">
-  			<a class="main-header-logo" href="index.html"><img src="img/logo.svg" width="60" height="35" alt="Логотип Gllacy Shop"></a>
+  			<a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="60" height="35" alt="Логотип Gllacy Shop"></a>
   			<ul class="site-navigation">
   				<li><a href="catalog.html">Каталог</a></li>
   				<li><a href="delivery-purchase.html">Доставка и оплата</a></li>
@@ -31,9 +31,12 @@
   		<section class="main-advertising">
   			<h2 class="visually-hidden">Купить в 1 клик</h2>
   			<ul class="advertising-list">
-  				<li class="advertising-item-1"><img src="img/advertising-item-1.svg" width="200" height="100" alt="Крем-брюле и пломбир"><p>Крем-брюле и пломбир с малиновым джемом</p></li>
-  				<li class="advertising-item-2"><img src="img/advertising-item-2.svg" width="200" height="100" alt="Шоколадный пломбир и лимонный сорбет"><p>Шоколадный пломбир и лимонный сорбет</p></li>
-  				<li class="advertising-item-3"><img src="img/advertising-item-3.svg" width="200" height="100" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
+  				<li class="advertising-item-1"><img src="img/advertising-item-1.png" width="167" height="260" alt="Крем-брюле и пломбир"><p>Крем-брюле и пломбир с малиновым джемом</p></li>
+  				<li class="advertising-item-2"><img src="img/advertising-item-2.png" width="167" height="260" alt="Шоколадный пломбир и лимонный сорбет"><p>Шоколадный пломбир и лимонный сорбет</p></li>
+  				<li class="advertising-item-3"><img src="img/advertising-item-3.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
+          <li class="advertising-item-4"><img src="img/advertising-item-4.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
+          <li class="advertising-item-5"><img src="img/advertising-item-5.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
+          <li class="advertising-item-6"><img src="img/advertising-item-6.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
   			</ul>
   			<a class="button" href="#">Давайте оба!</a>	
   		</section>
@@ -61,7 +64,8 @@
   					</h3>
   					<p class="hits-item-image">
               			<a href="hits-item.html">
-                			<img src="img/product-1.jpg" width="90" height="90" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                      <img src="img/hit.png" width="40" height="40" alt="хит">
+                			<img src="img/icecream-1.jpg" width="120" height="120" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
              			</a>
            			</p>
   					<p class="hits-item-price">310 р/<span>кг</span></p>
@@ -72,7 +76,8 @@
   					</h3>
   					<p class="hits-item-image">
               			<a href="hits-item.html">
-                			<img src="img/product-2.jpg" width="90" height="90" alt="Сливочно-кофейное с кусочками шоколада">
+                      <img src="img/hit.png" width="40" height="40" alt="хит">
+                			<img src="img/icecream-2.jpg" width="120" height="120" alt="Сливочно-кофейное с кусочками шоколада">
              			</a>
            			</p>
   					<p class="hits-item-price">380 р/<span>кг</span></p>
@@ -83,7 +88,8 @@
   					</h3>
   					<p class="hits-item-image">
               			<a href="hits-item.html">
-                			<img src="img/product-3.jpg" width="90" height="90" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                      <img src="img/hit.png" width="40" height="40" alt="хит">
+                			<img src="img/icecream-3.jpg" width="120" height="120" alt="Сливочно-клубничное с присыпкой из белого шоколада">
              			</a>
            			</p>
   					<p class="hits-item-price">355 р/<span>кг</span></p>
@@ -94,7 +100,8 @@
   					</h3>
   					<p class="hits-item-image">
               			<a href="hits-item.html">
-                			<img src="img/product-4.jpg" width="90" height="90" alt="Сливочное крем-брюле с карамельной подливкой">
+                      <img src="img/hit.png" width="40" height="40" alt="хит">
+                			<img src="img/icecream-4.jpg" width="120" height="120" alt="Сливочное крем-брюле с карамельной подливкой">
              			</a>
            			</p>
   					<p class="hits-item-price">415 р/<span>кг</span></p>
