--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li class="advertising-item-5"><img src="img/advertising-item-5.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
           <li class="advertising-item-6"><img src="img/advertising-item-6.png" width="167" height="260" alt="Пломбир с помадкой и клубничный щербет"><p>Пломбир с помадкой и клубничный щербет</p></li>
   			</ul>
-  			<a class="button" href="#">Давайте оба!</a>	
+  			<button><img src="img/button-give.png" width="40" height="20" alt="кнопка">Давайте оба!</button>
   		</section>
   		<section class="special-offers">
   			<h2 class="visually-hidden">Акции</h2>
